[metadata]
name = xeuclid

author = Munir Uz Zaman
author_email = bijli.begum.bd@gmail.com

version = 1.0.3

description = A python package for analytic geometry
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/MunirZaman/xeuclid

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    numpy
    scipy
    sympy
    pdf2image
    Pillow
